MyAspNetApi/k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: myspnetapi-service
spec:
  type: ClusterIP
  selector:
     app: myspnetapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
