MyAspNetApi/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: myspnetapi-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapi.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myaspnetapi-service
            port:
              number: 80
